feat: getImage
