# main-api/src/entity/image.entity.ts
@@ -1,0 +1,15 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class ImageEntity {
+  @ApiProperty({
+    type: String,
+    nullable: true,
+  })
+  filePath?: string;
+
+  @ApiProperty({
+    type: String,
+    nullable: true,
+  })
+  data: string;
+}
